--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^4.1.0",
     "bootstrap": "^4.5.2",
+    "emailjs-com": "^2.6.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-cool-portal": "^1.0.25",
     "react-dom": "^16.13.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
+    "reactstrap": "^8.9.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
